--- a/src/index.html
+++ b/src/index.html
@@ -2,4 +2,8 @@
     <li>
         <a href="challenges/raycasting">Raycasting</a>
     </li>
+    <li>
+        <a href="challenges/raycasting3d">Raycasting 3d</a>
+    </li>
+    
 </ul>
