--- a/challenges/raycasting3d/index.html
+++ b/challenges/raycasting3d/index.html
@@ -3,7 +3,7 @@
         <title>Raycasting</title>
     </head>
     <body>
-        <script src="/scripts/p5.js"></script>
-        <script src="/challenges/raycasting3d/index.js"></script>
+        <script src="../../scripts/p5.js"></script>
+        <script src="raycasting3d/index.js"></script>
     </body>
 </html>
