--- a/src/challenges/raycasting3d/index.html
+++ b/src/challenges/raycasting3d/index.html
@@ -4,6 +4,10 @@
     </head>
     <body>
         <script src="../../scripts/p5.js"></script>
-        <script src="./raycasting3d/index.js"></script>
+        <script src="../../challenges/raycasting3d/block.js"></script>
+        <script src="../../challenges/raycasting3d/ray.js"></script>
+        <script src="../../challenges/raycasting3d/player.js"></script>
+        <script src="../../challenges/raycasting3d/map2d.js"></script>
+        <script src="../../challenges/raycasting3d/index.js"></script>
     </body>
 </html>
